--- a/index.html
+++ b/index.html
@@ -316,11 +316,13 @@
                             <label for="mainAuthors">Autores principales a trabajar *</label>
                             <textarea id="mainAuthors" class="form-textarea" rows="4" 
                                 placeholder="Listá los autores principales que vas a analizar, con una breve justificación de su relevancia"></textarea>
+                            <button id="aiAuthorsHelp" class="ai-assist-btn">✨ Sugerir autores relevantes</button>
                         </div>
                         <div class="form-field">
                             <label for="keyConcepts">Conceptos filosóficos clave *</label>
                             <textarea id="keyConcepts" class="form-textarea" rows="4" 
                                 placeholder="Enumerá los conceptos filosóficos fundamentales que vas a trabajar (ej: libertad, angustia, mala fe, facticidad, proyecto)"></textarea>
+                            <button id="aiConceptsHelp" class="ai-assist-btn">✨ Identificar conceptos clave</button>
                         </div>
                         <div class="form-field">
                             <label for="theoreticalBackground">Antecedentes teóricos (200-300 palabras)</label>
@@ -329,6 +331,7 @@
                             <div class="char-counter">
                                 <span id="backgroundCount">0</span> palabras
                             </div>
+                            <button id="aiBackgroundHelp" class="ai-assist-btn">✨ Ayuda con antecedentes teóricos</button>
                         </div>
                     </div>
 
@@ -346,6 +349,7 @@
                             <div class="char-counter">
                                 <span id="methodologyCount">0</span> palabras
                             </div>
+                            <button id="aiMethodologyHelp" class="ai-assist-btn">✨ Ayuda con metodología</button>
                         </div>
                         <div class="form-field">
                             <label for="primarySources">Fuentes primarias principales *</label>
@@ -405,6 +409,7 @@ Mes 7-8: Redacción del capítulo 2
 Mes 9-10: Redacción del capítulo 3
 Mes 11: Conclusiones y revisión general
 Mes 12: Correcciones finales"></textarea>
+                            <button id="aiTimelineHelp" class="ai-assist-btn">✨ Sugerir cronograma</button>
                         </div>
                     </div>
 
